# qr_dxf

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/qr_dxf/: __init__.py  __main__.py  dxf.py  generator.py  matrix_utils.py  qrcodegen.py
static/css/: style.css
static/js/: main.js
templates/: index.html
