[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-dxf"
version = "0.1.0"
description = "Generate QR codes and export them as DXF geometry"
readme = "README.md"
authors = [{name = "QR DXF contributors"}]
license = {text = "MIT License"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
